--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
     <title>Bosch Car Service | Carlin Auto Mecânica e Peças
     </title>
+    <link rel="icon" href="assets/img/bosch-service-logo-vector.png" type="image/x-icon" sizes="32x32">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/elements.css">
     <link rel="stylesheet" href="assets/css/variables.css">
